src/objects/Costing_Quote__c/Costing_Quote__c.object-meta.xml
<CustomObject>
    <label>Costing Quote</label>
    <nameField>
        <label>Costing Quote</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Costing Quote</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>