src/objects/Costing_Quote__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stan Himelinski</fullName>
            </value>
            <value>
                <fullName>Dan Schwarcz</fullName>
            </value>
            <value>
                <fullName>Matthew Snyder</fullName>
            </value>
            <value>
                <fullName>Domenic Michaux</fullName>
            </value>
            <value>
                <fullName>Bill Smith</fullName>
            </value>
            <value>
                <fullName>Coleman Strohm</fullName>
            </value>
            <value>
                <fullName>Steve Napoletan</fullName>
            </value>
            <value>
                <fullName>Gary Benn</fullName>
            </value>
            <value>
                <fullName>Derec Ciafre</fullName>
            </value>
            <value>
                <fullName>Rachel Sportelli</fullName>
            </value>
            <value>
                <fullName>Chris Hunter</fullName>
            </value>
            <value>
                <fullName>Pete Brown</fullName>
            </value>
            <value>
                <fullName>Gerald Fetterman</fullName>
            </value>
            <value>
                <fullName>Lynn Keitzer</fullName>
            </value>
            <value>
                <fullName>Mike Skalski</fullName>
            </value>
            <value>
                <fullName>Jeff Barca</fullName>
            </value>
            <value>
                <fullName>Jan Emerick</fullName>
            </value>
            <value>
                <fullName>Mark Klabnik</fullName>
            </value>
            <value>
                <fullName>Randy Brown</fullName>
            </value>
            <value>
                <fullName>Cameron Payne</fullName>
            </value>
            <value>
                <fullName>Brad Transue</fullName>
            </value>
            <value>
                <fullName>Rob Mrozek</fullName>
            </value>
            <value>
                <fullName>Steve Omecinski</fullName>
            </value>
            <value>
                <fullName>Kim Braden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>