src/objects/Costing_Quote__c/fields/Build_Location__c.field-meta.xml
<CustomField>
    <fullName>Build_Location__c</fullName>
    <label>Production Build Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Vietnam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>