src/objects/Costing_Quote__c/fields/Cost_2__c.field-meta.xml
<CustomField>
    <fullName>Cost_2__c</fullName>
    <label>Cost #2</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>