src/objects/Costing_Quote__c/fields/Cost_3__c.field-meta.xml
<CustomField>
    <fullName>Cost_3__c</fullName>
    <label>Cost #3</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>