src/objects/Costing_Quote__c/fields/Cost_4__c.field-meta.xml
<CustomField>
    <fullName>Cost_4__c</fullName>
    <label>Cost #4</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>