src/objects/Costing_Quote__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost #1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>