src/objects/Costing_Quote__c/fields/Costing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Costing_Notes__c</fullName>
    <label>Costing Notes</label>
    <type>TextArea</type>
</CustomField>