src/objects/Costing_Quote__c/fields/Costing_Request__c.field-meta.xml
<CustomField>
    <fullName>Costing_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Costing Request</label>
    <referenceTo>Costing__c</referenceTo>
    <relationshipLabel>Costing Quote Info</relationshipLabel>
    <relationshipName>Costing_Quote_Info</relationshipName>
    <type>Lookup</type>
</CustomField>