src/objects/Costing_Quote__c/fields/Critical_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Critical_Equipment__c</fullName>
    <label>Critical Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>alignment station</fullName>
            </value>
            <value>
                <fullName>Development Coater</fullName>
            </value>
            <value>
                <fullName>DLC</fullName>
            </value>
            <value>
                <fullName>Ellipsometer</fullName>
            </value>
            <value>
                <fullName>2nd IBS</fullName>
            </value>
            <value>
                <fullName>LIDT facility</fullName>
            </value>
            <value>
                <fullName>reference surface at lambda/?</fullName>
            </value>
            <value>
                <fullName>subnanometer roughness reference</fullName>
            </value>
            <value>
                <fullName>Lasers at different wavelengths</fullName>
            </value>
            <value>
                <fullName>Chamber (M needs tooling)</fullName>
            </value>
            <value>
                <fullName>Near Net Tooling</fullName>
            </value>
            <value>
                <fullName>Sub 150mm MRF Wheel</fullName>
            </value>
            <value>
                <fullName>Free form software for MRF</fullName>
            </value>
            <value>
                <fullName>CP Polisher</fullName>
            </value>
            <value>
                <fullName>4D Interferometer</fullName>
            </value>
            <value>
                <fullName>Laser Testing Resolution</fullName>
            </value>
            <value>
                <fullName>Metrology Testing Resolution</fullName>
            </value>
            <value>
                <fullName>5 Axis Mill</fullName>
            </value>
            <value>
                <fullName>Free form / Acylinder Metrology</fullName>
            </value>
            <value>
                <fullName>Equipment Size (Parts too Small)</fullName>
            </value>
            <value>
                <fullName>Equipment Size (Parts too Large)</fullName>
            </value>
            <value>
                <fullName>FTS-70</fullName>
            </value>
            <value>
                <fullName>FTS-35</fullName>
            </value>
            <value>
                <fullName>STS</fullName>
            </value>
            <value>
                <fullName>Micromill-Levicron</fullName>
            </value>
            <value>
                <fullName>Micromill-Other</fullName>
            </value>
            <value>
                <fullName>B-Axis</fullName>
            </value>
            <value>
                <fullName>Robot</fullName>
            </value>
            <value>
                <fullName>MicroLam</fullName>
            </value>
            <value>
                <fullName>Preci 5 height</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>