src/objects/Costing_Quote__c/fields/Critical_Equipment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Critical_Equipment_Notes__c</fullName>
    <label>Critical Equipment Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>