src/objects/Costing_Quote__c/fields/Current_Manufacturing_Capability__c.field-meta.xml
<CustomField>
    <fullName>Current_Manufacturing_Capability__c</fullName>
    <description>Do you already have the capability to manufacture this component?</description>
    <inlineHelpText>Do you already have the capability to manufacture this component?</inlineHelpText>
    <label>Current Manufacturing Capability?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>