src/objects/Costing_Quote__c/fields/Current_Metrology_Set_ups__c.field-meta.xml
<CustomField>
    <fullName>Current_Metrology_Set_ups__c</fullName>
    <description>Do we have the required metrology set-ups (capability &amp; process)to test this component?</description>
    <inlineHelpText>Do we have the required metrology set-ups (capability &amp; process)to test this component?</inlineHelpText>
    <label>Current Metrology Set-ups?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>