src/objects/Costing_Quote__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DT</fullName>
            </value>
            <value>
                <fullName>CTG</fullName>
            </value>
            <value>
                <fullName>OF</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>MQ</fullName>
            </value>
            <value>
                <fullName>GSC</fullName>
            </value>
            <value>
                <fullName>DMG</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>