src/objects/Costing_Quote__c/fields/Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Exception_Notes__c</fullName>
    <label>Exception Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>