src/objects/Costing_Quote__c/fields/Fixed_vs_Bgdt_5__c.field-meta.xml
<CustomField>
    <fullName>Fixed_vs_Bgdt_5__c</fullName>
    <inlineHelpText>Alpha Samples = Performance Verification Units
Beta Samples = Qualification Units</inlineHelpText>
    <label>Fixed vs. Bgdt - #5</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Budgetary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>