src/objects/Costing_Quote__c/fields/Fixed_vs_Budgetary__c.field-meta.xml
<CustomField>
    <fullName>Fixed_vs_Budgetary__c</fullName>
    <label>Fixed vs. Bgdt - #1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Budgetary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>