src/objects/Costing_Quote__c/fields/Process_Dev_Notes__c.field-meta.xml
<CustomField>
    <fullName>Process_Dev_Notes__c</fullName>
    <label>Process Dev. Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>