src/objects/Costing_Quote__c/fields/Prod_Phase_4__c.field-meta.xml
<CustomField>
    <fullName>Prod_Phase_4__c</fullName>
    <inlineHelpText>Alpha Samples = Performance Verification Units
Beta Samples = Qualification Units</inlineHelpText>
    <label>Prod. Phase - #4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alpha Samples</fullName>
            </value>
            <value>
                <fullName>Beta Samples</fullName>
            </value>
            <value>
                <fullName>Initial Production</fullName>
            </value>
            <value>
                <fullName>Mass Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>