src/objects/Costing_Quote__c/fields/Qty_Range_3__c.field-meta.xml
<CustomField>
    <fullName>Qty_Range_3__c</fullName>
    <label>Qty Range #3</label>
    <length>15</length>
    <type>Text</type>
</CustomField>