src/objects/Costing_Quote__c/fields/Total_Hours_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Quoted__c</fullName>
    <inlineHelpText>Total hours the employee worked on the Quote to provide back to Sales.</inlineHelpText>
    <label>Total Hours Quoted</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>