src/objects/Costing_Quote__c/fields/Transfer_to_Sing_Suz__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Sing_Suz__c</fullName>
    <inlineHelpText>Can this item be transferred to the Singapore or Suzhou location for manufacturing?</inlineHelpText>
    <label>Transfer to Sing/Suz?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>